// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPokemonLearnset GIVEN a valid pokemon and move array THEN returns LearnsetEntry 1`] = `
Object {
  "getPokemonLearnset": Object {
    "dreamworldMoves": Array [],
    "eggMoves": Array [],
    "eventMoves": Array [
      Object {
        "generation": 6,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "name": "dragondance",
      },
      Object {
        "generation": 3,
        "name": "dragondance",
      },
    ],
    "levelUpMoves": Array [
      Object {
        "generation": 8,
        "level": 62,
        "name": "dragondance",
      },
      Object {
        "generation": 7,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 6,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "level": 53,
        "name": "dragondance",
      },
    ],
    "tmMoves": Array [
      Object {
        "generation": 8,
        "name": "dragondance",
      },
    ],
    "tutorMoves": Array [],
    "virtualTransferMoves": Array [],
  },
}
`;

exports[`getPokemonLearnset GIVEN a valid pokemon and multiple moves THEN returns LearnsetEntry 1`] = `
Object {
  "getPokemonLearnset": Object {
    "dreamworldMoves": Array [],
    "eggMoves": Array [],
    "eventMoves": Array [
      Object {
        "generation": 6,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "name": "dragondance",
      },
      Object {
        "generation": 3,
        "name": "dragondance",
      },
    ],
    "levelUpMoves": Array [
      Object {
        "generation": 8,
        "level": 62,
        "name": "dragondance",
      },
      Object {
        "generation": 7,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 6,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "level": 53,
        "name": "dragondance",
      },
    ],
    "tmMoves": Array [
      Object {
        "generation": 8,
        "name": "dragondance",
      },
      Object {
        "generation": 8,
        "name": "dragonclaw",
      },
      Object {
        "generation": 7,
        "name": "dragonclaw",
      },
      Object {
        "generation": 6,
        "name": "dragonclaw",
      },
      Object {
        "generation": 5,
        "name": "dragonclaw",
      },
      Object {
        "generation": 4,
        "name": "dragonclaw",
      },
      Object {
        "generation": 3,
        "name": "dragonclaw",
      },
    ],
    "tutorMoves": Array [],
    "virtualTransferMoves": Array [],
  },
}
`;

exports[`getPokemonLearnset GIVEN a valid pokemon and single move THEN returns LearnsetEntry 1`] = `
Object {
  "getPokemonLearnset": Object {
    "dreamworldMoves": Array [],
    "eggMoves": Array [],
    "eventMoves": Array [
      Object {
        "generation": 6,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "name": "dragondance",
      },
      Object {
        "generation": 3,
        "name": "dragondance",
      },
    ],
    "levelUpMoves": Array [
      Object {
        "generation": 8,
        "level": 62,
        "name": "dragondance",
      },
      Object {
        "generation": 7,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 6,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "level": 53,
        "name": "dragondance",
      },
    ],
    "tmMoves": Array [
      Object {
        "generation": 8,
        "name": "dragondance",
      },
    ],
    "tutorMoves": Array [],
    "virtualTransferMoves": Array [],
  },
}
`;

exports[`getPokemonLearnset GIVEN a valid pokemon, a single move and generation THEN returns LearnsetEntry 1`] = `
Object {
  "getPokemonLearnset": Object {
    "dreamworldMoves": Array [],
    "eggMoves": Array [],
    "eventMoves": Array [],
    "levelUpMoves": Array [
      Object {
        "generation": 7,
        "level": 61,
        "name": "dragondance",
      },
    ],
    "tmMoves": Array [],
    "tutorMoves": Array [],
    "virtualTransferMoves": Array [],
  },
}
`;

exports[`getPokemonLearnset GIVEN a valid pokemon, move array and generation THEN returns LearnsetEntry 1`] = `
Object {
  "getPokemonLearnset": Object {
    "dreamworldMoves": Array [],
    "eggMoves": Array [],
    "eventMoves": Array [],
    "levelUpMoves": Array [
      Object {
        "generation": 7,
        "level": 61,
        "name": "dragondance",
      },
    ],
    "tmMoves": Array [],
    "tutorMoves": Array [],
    "virtualTransferMoves": Array [],
  },
}
`;

exports[`getPokemonLearnset GIVEN a valid pokemon, multiple moves and generation THEN returns LearnsetEntry 1`] = `
Object {
  "getPokemonLearnset": Object {
    "dreamworldMoves": Array [],
    "eggMoves": Array [],
    "eventMoves": Array [],
    "levelUpMoves": Array [
      Object {
        "generation": 7,
        "level": 61,
        "name": "dragondance",
      },
    ],
    "tmMoves": Array [
      Object {
        "generation": 7,
        "name": "dragonclaw",
      },
    ],
    "tutorMoves": Array [],
    "virtualTransferMoves": Array [],
  },
}
`;

exports[`getPokemonLearnset GIVEN an invalid generation THEN returns error 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Argument Validation Error],
  ],
}
`;

exports[`getPokemonLearnset GIVEN an invalid move THEN returns error 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$moves" got invalid value "totally_invalid_move"; Value "totally_invalid_move" does not exist in "Moves" enum.],
  ],
}
`;

exports[`getPokemonLearnset GIVEN an invalid pokemon THEN returns error 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$pokemon" got invalid value "totally_invalid_pokemon"; Value "totally_invalid_pokemon" does not exist in "Pokemon" enum.],
    [GraphQLError: Variable "$moves" of required type "[Moves!]!" was not provided.],
  ],
}
`;

exports[`getPokemonLearnsetByFuzzy GIVEN a fuzzy pokemon and exact move array THEN returns LearnsetEntry 1`] = `
Object {
  "getPokemonLearnsetByFuzzy": Object {
    "dreamworldMoves": Array [],
    "eggMoves": Array [],
    "eventMoves": Array [
      Object {
        "generation": 6,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "name": "dragondance",
      },
      Object {
        "generation": 3,
        "name": "dragondance",
      },
    ],
    "levelUpMoves": Array [
      Object {
        "generation": 8,
        "level": 62,
        "name": "dragondance",
      },
      Object {
        "generation": 7,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 6,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "level": 53,
        "name": "dragondance",
      },
    ],
    "tmMoves": Array [
      Object {
        "generation": 8,
        "name": "dragondance",
      },
    ],
    "tutorMoves": Array [],
    "virtualTransferMoves": Array [],
  },
}
`;

exports[`getPokemonLearnsetByFuzzy GIVEN a fuzzy pokemon and fuzzy move array THEN returns LearnsetEntry 1`] = `
Object {
  "getPokemonLearnsetByFuzzy": Object {
    "dreamworldMoves": Array [],
    "eggMoves": Array [],
    "eventMoves": Array [
      Object {
        "generation": 6,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "name": "dragondance",
      },
      Object {
        "generation": 3,
        "name": "dragondance",
      },
    ],
    "levelUpMoves": Array [
      Object {
        "generation": 8,
        "level": 62,
        "name": "dragondance",
      },
      Object {
        "generation": 7,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 6,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "level": 53,
        "name": "dragondance",
      },
    ],
    "tmMoves": Array [
      Object {
        "generation": 8,
        "name": "dragondance",
      },
    ],
    "tutorMoves": Array [],
    "virtualTransferMoves": Array [],
  },
}
`;

exports[`getPokemonLearnsetByFuzzy GIVEN an exact pokemon and fuzzy move array THEN returns LearnsetEntry 1`] = `
Object {
  "getPokemonLearnsetByFuzzy": Object {
    "dreamworldMoves": Array [],
    "eggMoves": Array [],
    "eventMoves": Array [
      Object {
        "generation": 6,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "name": "dragondance",
      },
      Object {
        "generation": 3,
        "name": "dragondance",
      },
    ],
    "levelUpMoves": Array [
      Object {
        "generation": 8,
        "level": 62,
        "name": "dragondance",
      },
      Object {
        "generation": 7,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 6,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 5,
        "level": 61,
        "name": "dragondance",
      },
      Object {
        "generation": 4,
        "level": 53,
        "name": "dragondance",
      },
    ],
    "tmMoves": Array [
      Object {
        "generation": 8,
        "name": "dragondance",
      },
    ],
    "tutorMoves": Array [],
    "virtualTransferMoves": Array [],
  },
}
`;
